<resources>
    <string name="app_name">Conversic</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">New? Register here!</string>
    <string name="forget">Forget Password?</string>
    <string name="register2">Register</string>
    <string name="logout">Log Out</string>
    <string name="ady_login">Already Registered? Login Here!</string>
    <string name="welcome_to_conversic">Welcome to Conversic!</string>
    <string name="crash_course">Crash Course</string>
    <string name="main_menu">Main Menu</string>
    <string name="conversic">Conversic</string>
    <string name="library">Library</string>
    <string name="send_email">Send Email</string>
    <string name="forgot_your_password_let_us_send_you_a_verification_email_and_help_is_on_the_way">Forgot your password? Let us send you a verification email and help is on the way!</string>
    <string name="select_your_conversion_type">Select your conversion type:</string>
    <string name="check_library">Check Library</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="conversic2">Conversic2</string>
    <string name="conversic1">Conversic1</string>
    <string name="function_under_development">Function under development</string>
    <string name="head_to_library">Head to Library</string>
    <string name="you_re_one_click_away">You\'re one click away!</string>
    <string name="are_you_sure_you_wont_to_log_out">Are you sure you wont to log out?</string>
    <string name="yes">Yes</string>
    <string name="leaving_so_soon">Leaving so soon?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go">Go</string>
</resources>
