<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_conversic">

    <fragment
        android:id="@+id/nav_conversic"
        android:name="com.example.conversic.ui.conversic.ConversicFragment"
        android:label="@string/conversic"
        tools:layout="@layout/conversic_fragment" />

    <fragment
        android:id="@+id/nav_crash_course"
        android:name="com.example.conversic.ui.crashcourse.CrashCourseFragment"
        android:label="@string/crash_course"
        tools:layout="@layout/crash_course_fragment" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.conversic.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/library_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.conversic.ui.logout.LogOutFragment"
        android:label="@string/logout"
        tools:layout="@layout/log_out_fragment" />
</navigation>