<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCC"
        android:layout_width="291dp"
        android:layout_height="75dp"
        android:layout_marginTop="64dp"
        android:text="@string/crash_course"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/buttonConversic"
        app:layout_constraintTop_toBottomOf="@id/buttonConversic" />

    <Button
        android:id="@+id/buttonLib"
        android:layout_width="291dp"
        android:layout_height="75dp"
        android:layout_marginTop="64dp"
        android:text="@string/library"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/buttonCC"
        app:layout_constraintTop_toBottomOf="@id/buttonCC" />

    <TextView
        android:id="@+id/textViewMainMenu"
        android:layout_width="141dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainMenu"
        app:layout_constraintVertical_bias="0.955"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonConversic"
        android:layout_width="291dp"
        android:layout_height="75dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/conversic"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMainMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>